--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                       but hey, it's pure CSS magic.
                       -->
                       <ul id="menu">
-                        <a href="login.html">Войти</a>
+                        <a href="/login.html">Войти</a>
                         <p>Категории:</p>
                         <a href="#">Цветы</a>
                         <a href="#">Свечи</a>
